@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: ????
-  Changes:
+  Features:
+    - Right-clicking the import button will ignore blank filters
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2020-09-17
